# misis-fall-blokih2025-tp

./: README.md
Homework-06-Microservices-gRPC-forthang/: README.md  TASK_REPORT.md
Homework-06-Microservices-gRPC-forthang/cpp/: CMakeLists.txt  CMakeLists_simple.txt  Makefile  config.yaml  demo.sh
Homework-06-Microservices-gRPC-forthang/proto/: metrics.proto
Homework-06-Microservices-gRPC-forthang/tests/: grade.py
code-refactoring-002-task-forthang/: CMakeLists.txt  README.md  TASK_REPORT.md
code-refactoring-002-task-forthang/test/: CMakeLists.txt  CMakeLists.txt.in
hw-tp-05-fold-expression-forthang/: .gitignore  CMakeLists.txt  Reamde.md  TASK_REPORT.md
hw-tp-05-fold-expression-forthang/include/: base_interface.hpp
hw-tp-05-fold-expression-forthang/src/: base_interface.cpp  demo.cpp
hw-tp-05-fold-expression-forthang/tests/: sample_test.cpp
hw-tp-05-has-value-type-forthang/: CMakeLists.txt  Reamde.md  TASK_REPORT.md
hw-tp-05-has-value-type-forthang/include/: base_interface.hpp
hw-tp-05-has-value-type-forthang/src/: demo.cpp
hw-tp-05-has-value-type-forthang/tests/: sample_test.cpp
hw-tp-05-vector-type-compilation-forthang/: CMakeLists.txt  Reamde.md  TASK_REPORT.md
hw-tp-05-vector-type-compilation-forthang/include/: base_interface.hpp
hw-tp-05-vector-type-compilation-forthang/src/: demo.cpp
hw-tp-05-vector-type-compilation-forthang/tests/: sample_test.cpp
rl-coursework/: DEFENSE.md  README.md  demo_walker.py  evaluate.py  requirements.txt  train_visual.py  train_walker.py  visualize.py
rl-coursework/agents/: __init__.py  ppo.py  (+1 more)
(+15 files in other folders)
